--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section section--margin94">
+        <section class="section section--padding94">
             <div class="container">
                 <h2 class="header-secondary">Czym się zajmujemy</h2>
                 <ul class="list">
@@ -91,7 +91,7 @@
             </div>
         </section>
 
-        <section class="section section--background-light-gray section--margin94">
+        <section class="section section--background-light-gray section--padding94">
             <div class="container">
                 <h2 class="header-secondary">Nasz zespół</h2>
                 <ul class="list">
