--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="link" href="mailto:info@devstudio.com">
                             <div class="link-container">
                                 <svg width="16" height="12">
-                                    <use xlink:href="../images/icons.svg#envelope-logo"></use>
+                                    <use xlink:href="./images/icons.svg#envelope-logo"></use>
                                 </svg>
                                 info@example.com
                             </div>
@@ -44,7 +44,7 @@
                         <a class="link" href="tel:+48111111111">
                             <div class="link-container">
                                 <svg width="10" height="16">
-                                    <use xlink:href="../images/icons.svg#smartphone-logo"></use>
+                                    <use xlink:href="./images/icons.svg#smartphone-logo"></use>
                                 </svg>
                                 +48 111 111 111
                             </div>
@@ -67,7 +67,7 @@
                     <li class="list-item">
                         <div class="list-icon">
                             <svg width="65.32" height="70">
-                                <use xlink:href="../images/icons.svg#antenna-logo"></use>
+                                <use xlink:href="./images/icons.svg#antenna-logo"></use>
                             </svg>
                         </div>
                         <h3 class="list-header">Lorem ipsum</h3>
@@ -79,7 +79,7 @@
                     <li class="list-item">
                         <div class="list-icon">
                             <svg width="65.32" height="70">
-                                <use xlink:href="../images/icons.svg#clock-logo"></use>
+                                <use xlink:href="./images/icons.svg#clock-logo"></use>
                             </svg>
                         </div>
                         <h3 class="list-header">Lorem ipsum</h3>
@@ -91,7 +91,7 @@
                     <li class="list-item">
                         <div class="list-icon">
                             <svg width="65.32" height="70">
-                                <use xlink:href="../images/icons.svg#diagram-logo"></use>
+                                <use xlink:href="./images/icons.svg#diagram-logo"></use>
                             </svg>
                         </div>
                         <h3 class="list-header">Lorem ipsum</h3>
@@ -103,7 +103,7 @@
                     <li class="list-item">
                         <div class="list-icon">
                             <svg width="65.32" height="70">
-                                <use xlink:href="../images/icons.svg#astronaut-logo"></use>
+                                <use xlink:href="./images/icons.svg#astronaut-logo"></use>
                             </svg>
                         </div>
                         <h3 class="list-header">Lorem ipsum</h3>
@@ -151,28 +151,28 @@
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">
-                                                    <use xlink:href="../images/icons.svg#instagram-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#instagram-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">ź
-                                                    <use xlink:href="../images/icons.svg#twitter-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#twitter-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">
-                                                    <use xlink:href="../images/icons.svg#facebook-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#facebook-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">
-                                                    <use xlink:href="../images/icons.svg#linkin-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#linkin-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
@@ -193,28 +193,28 @@
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">
-                                                    <use xlink:href="../images/icons.svg#instagram-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#instagram-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">ź
-                                                    <use xlink:href="../images/icons.svg#twitter-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#twitter-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">
-                                                    <use xlink:href="../images/icons.svg#facebook-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#facebook-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">
-                                                    <use xlink:href="../images/icons.svg#linkin-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#linkin-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
@@ -235,28 +235,28 @@
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">
-                                                    <use xlink:href="../images/icons.svg#instagram-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#instagram-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">ź
-                                                    <use xlink:href="../images/icons.svg#twitter-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#twitter-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">
-                                                    <use xlink:href="../images/icons.svg#facebook-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#facebook-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">
-                                                    <use xlink:href="../images/icons.svg#linkin-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#linkin-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
@@ -278,28 +278,28 @@
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">
-                                                    <use xlink:href="../images/icons.svg#instagram-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#instagram-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">ź
-                                                    <use xlink:href="../images/icons.svg#twitter-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#twitter-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">
-                                                    <use xlink:href="../images/icons.svg#facebook-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#facebook-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
                                         <li class="social">
                                             <svg width="20" height="20">
                                                 <a href="#" class="link">
-                                                    <use xlink:href="../images/icons.svg#linkin-logo"></use>
+                                                    <use xlink:href="./images/icons.svg#linkin-logo"></use>
                                                 </a>
                                             </svg>
                                         </li>
@@ -318,35 +318,35 @@
                     <li class="list-item client-card">
                         <a href="#" class="link">
                             <svg width="106" height="60.04">
-                                <use xlink:href="../images/icons.svg#company-logo-1"></use>
+                                <use xlink:href="./images/icons.svg#company-logo-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="list-item client-card">
                         <a href="#" class="link">
                             <svg width="106" height="60.04">
-                                <use xlink:href="../images/icons.svg#company-logo-2"></use>
+                                <use xlink:href="./images/icons.svg#company-logo-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="list-item client-card">
                         <a href="#" class="link">
                             <svg width="106" height="60.04">
-                                <use xlink:href="../images/icons.svg#company-logo-3"></use>
+                                <use xlink:href="./images/icons.svg#company-logo-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="list-item client-card">
                         <a href="#" class="link">
                             <svg width="106" height="60.04">
-                                <use xlink:href="../images/icons.svg#company-logo-4"></use>
+                                <use xlink:href="./images/icons.svg#company-logo-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="list-item client-card">
                         <a href="#" class="link">
                             <svg width="106" height="60.04">
-                                <use xlink:href="../images/icons.svg#company-logo-5"></use>
+                                <use xlink:href="./images/icons.svg#company-logo-5"></use>
                             </svg>
                         </a>
                     </li>
@@ -354,7 +354,7 @@
                         <div class="client-logo">
                             <a href="#" class="link">
                                 <svg width="106" height="60.04">
-                                    <use xlink:href="../images/icons.svg#company-logo-6"></use>
+                                    <use xlink:href="./images/icons.svg#company-logo-6"></use>
                                 </svg>
                             </a>
                         </div>
@@ -380,28 +380,28 @@
                         <li class="social">
                             <svg width="20" height="20">
                                 <a href="#" class="link">
-                                    <use xlink:href="../images/icons.svg#instagram-logo"></use>
+                                    <use xlink:href="./images/icons.svg#instagram-logo"></use>
                                 </a>
                             </svg>
                         </li>
                         <li class="social">
                             <svg width="20" height="20">
                                 <a href="#" class="link">
-                                    <use xlink:href="../images/icons.svg#twitter-logo"></use>
+                                    <use xlink:href="./images/icons.svg#twitter-logo"></use>
                                 </a>
                             </svg>
                         </li>
                         <li class="social">
                             <svg width="20" height="20">
                                 <a href="#" class="link">
-                                    <use xlink:href="../images/icons.svg#facebook-logo"></use>
+                                    <use xlink:href="./images/icons.svg#facebook-logo"></use>
                                 </a>
                             </svg>
                         </li>
                         <li class="social">
                             <svg width="20" height="20">
                                 <a href="#" class="link">
-                                    <use xlink:href="../images/icons.svg#linkin-logo"></use>
+                                    <use xlink:href="./images/icons.svg#linkin-logo"></use>
                                 </a>
                             </svg>
                         </li>
