--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                         <a class="link" href="mailto:info@devstudio.com">
                             <div class="link-container">
                                 <svg width="16" height="12">
-                                    <use xlink:href="../images/icons.svg#envelope-logo"></use>
+                                    <use xlink:href="./images/icons.svg#envelope-logo"></use>
                                 </svg>
                                 info@example.com
                             </div>
@@ -44,7 +44,7 @@
                         <a class="link" href="tel:+48111111111">
                             <div class="link-container">
                                 <svg width="10" height="16">
-                                    <use xlink:href="../images/icons.svg#smartphone-logo"></use>
+                                    <use xlink:href="./images/icons.svg#smartphone-logo"></use>
                                 </svg>
                                 +48 111 111 111
                             </div>
@@ -178,28 +178,28 @@
                         <li class="social">
                             <svg width="20" height="20">
                                 <a href="#" class="link">
-                                    <use xlink:href="../images/icons.svg#instagram-logo"></use>
+                                    <use xlink:href="./images/icons.svg#instagram-logo"></use>
                                 </a>
                             </svg>
                         </li>
                         <li class="social">
                             <svg width="20" height="20">
                                 <a href="#" class="link">
-                                    <use xlink:href="../images/icons.svg#twitter-logo"></use>
+                                    <use xlink:href="./images/icons.svg#twitter-logo"></use>
                                 </a>
                             </svg>
                         </li>
                         <li class="social">
                             <svg width="20" height="20">
                                 <a href="#" class="link">
-                                    <use xlink:href="../images/icons.svg#facebook-logo"></use>
+                                    <use xlink:href="./images/icons.svg#facebook-logo"></use>
                                 </a>
                             </svg>
                         </li>
                         <li class="social">
                             <svg width="20" height="20">
                                 <a href="#" class="link">
-                                    <use xlink:href="../images/icons.svg#linkin-logo"></use>
+                                    <use xlink:href="./images/icons.svg#linkin-logo"></use>
                                 </a>
                             </svg>
                         </li>
