--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <div class="header__container">
             <a href="./index.html" class="header__logo">
                 <span class="header__logo--color">Web</span>Studio</a>
+            <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                <svg width="24" height="24">
+                    <use xlink:href="./images/hamburger-menu.svg#hamburger-menu"></use>
+                </svg>
+            </button>
             <nav>
                 <ul class="main-nav__list">
                     <li>
@@ -502,16 +507,35 @@
         </div>
     </div>
 
-    <div class="mobile-menu">
+    <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu">
+            <svg width="18" height="18">
+                <use xlink:href="./images/icons.svg#close-black"></use>
+            </svg>
+        </button>
         <ul class="mobile-menu__list">
-            <li class="mobile-menu__item">Agencja</li>
-            <li class="mobile-menu__item">Portfolio</li>
-            <li class="mobile-menu__item">Kontakt</li>
+            <li class="mobile-menu__item">
+                <a class="mobile-menu__link active-mobile" href="index.html">Agencja</a>
+            </li>
+            <li class="mobile-menu__item">
+                <a class="mobile-menu__link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="mobile-menu__item">
+                <a class="mobile-menu__link" href="#">Kontakt</a>
+            </li>
         </ul>
 
         <ul class="mobile-contact__list">
-            <li class="mobile-contact__item"></li>
-            <li class="mobile-contact__item"></li>
+            <li class="mobile-contact__item">
+                <a href="tel:+48111111111" class="mobile-contact__link">
+                    +48 111 111 111
+                </a>
+            </li>
+            <li class="mobile-contact__item">
+                <a href="mailto:info@devstudio.com" class="mobile-contact__link">
+                    info@devstudio.com
+                </a>
+            </li>
         </ul>
 
         <ul class="mobile-socials__list">
@@ -522,7 +546,10 @@
         </ul>
     </div>
     <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
