--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                 <ul class="team__list">
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/stuff.jpg" alt="photo of Product Manager - John Doe"
-                                class="team__card-picture" />
+                            <img src="./images/team1.jpg" srcset="./images/team1@2x.jpg 2x"
+                                alt="photo of Product Manager - John Doe" class="team__card-picture" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
                                 <p class="team__card__profession">
@@ -209,8 +209,8 @@
                     </li>
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/stuff2.jpg" alt="photo of Frontend Developer - John Doe"
-                                class="team__card-picture" />
+                            <img src="./images/team2.jpg" srcset="./images/team2@2x.jpg 2x"
+                                alt="photo of Frontend Developer - John Doe" class="team__card-picture" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
                                 <p class="team__card__profession">
@@ -251,7 +251,7 @@
                     </li>
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/stuff3.jpg" alt="photo of Marketing Specialist - John Doe"
+                            <img src="./images/team3.jpg" srcset="./images/team3@2x.jpg 2x" alt="photo of Marketing Specialist - John Doe"
                                 class="team__card-picture" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
@@ -293,7 +293,7 @@
                     </li>
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/stuff4.jpg" alt="photo of UI Designer - John Doe"
+                            <img src="./images/team4.jpg" srcset="./images/team4@2x.jpg 2x" alt="photo of UI Designer - John Doe"
                                 class="team__card-picture" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
