--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
                     </li>
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/team3.jpg" srcset="./images/team3@2x.jpg 2x" alt="photo of Marketing Specialist - John Doe"
-                                class="team__card-picture" />
+                            <img src="./images/team3.jpg" srcset="./images/team3@2x.jpg 2x"
+                                alt="photo of Marketing Specialist - John Doe" class="team__card-picture" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
                                 <p class="team__card__profession">
@@ -293,8 +293,8 @@
                     </li>
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/team4.jpg" srcset="./images/team4@2x.jpg 2x" alt="photo of UI Designer - John Doe"
-                                class="team__card-picture" />
+                            <img src="./images/team4.jpg" srcset="./images/team4@2x.jpg 2x"
+                                alt="photo of UI Designer - John Doe" class="team__card-picture" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
                                 <p class="team__card__profession">
@@ -495,9 +495,11 @@
                         <label for="user-policy" class="modal-form-policy-text">
 
                             Oświadczam iż akceptuję&nbsp;<a href="#" class="link">Regulamin&nbsp;</a> i&nbsp; <a
-                                href="#" class="link">Politykę Prywatności</a>.</label>
-
+                                href="#" class="link">Politykę Prywatności</a>.
+                        </label>
                     </div>
+
+
 
                     <div class="button-center">
                         <button type="submit" class="button">Wyślij</button>
